# OpenNfr_E2_Gui-6.0

./: README.md  configure.ac  mytest.py  skin.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/DVDBurn/: Bludisc.py  Process.py  Project.py  ProjectSettings.py  Title.py  TitleList.py  TitleProperties.py
lib/python/Plugins/Extensions/Infopanel/: Flash_local.py  Makefile.am  Net_test.py  QuickMenu.py  SpinnerSelectionBox.py  iptv_convert.py  plugin.py  skin_setup.py
lib/python/Plugins/Extensions/MediaPlayer/: settings.py
lib/python/Plugins/Extensions/MediaPortal/: Makefile.am  keymap.xml  plugin.py
lib/python/Plugins/Extensions/MediaPortal/additions/: additions.xml
lib/python/Plugins/Extensions/MediaPortal/resources/: MPHLSPUriResolver.py  MPYoutubeUriResolver.py  Makefile.am  ampyalink.py  animations.xml  api.py  atvlink.py  choiceboxext.py  configlistext.py  coverhelper.py  cvevosignalgoextractor.py  eightieslink.py  fetcher.py  firedriveshared.py  hlsplayer.py  hosters.xml  httpplayer.py  imports.py  keyboardext.py  m3u8.py  menuhelper.py  mp_globals.py  mpscreen.py  mtvdelink.py  porndecrypt.py  realdebrid.py  showAsThumb.py  simplelist.py  simpleplayer.py  streams.py  tmdb.py  tw_util.py  twagenthelper.py  update.py  youtubelink.py  youtubeplayer.py  yt_url.py
lib/python/Plugins/Extensions/MediaPortal/skins_1080/: Makefile.am
lib/python/Plugins/Extensions/MediaPortal/skins_2160/: Makefile.am
lib/python/Plugins/Extensions/NFR4XBoot/: ex_init.py  nfr4xboot.py  plugin.py
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
(+322 files in other folders)
